fix: slogan shift

--- a/scss/index.css
+++ b/scss/index.css
@@ -530,7 +530,7 @@ table {
 }
 
 .slogan {
-  margin: 0 140px;
+  padding-inline: 140px;
 }
 @media (max-width: 1060px) {
   .slogan {
